deploy: 2ae00120266e1fb955bfcf4f95d3939428c14d71

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Open Podcasting Course – The Open Podcasting Course description</title>
+    <title>Open Podcasting сourse – Empowering podcasters through solid, community-driven education</title>
     <link rel="stylesheet" href="/assets/main.css" />
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
   </head>
@@ -18,10 +18,10 @@
           height="50"
         />
         <div>
-          <a class="site-title-link" href="https://podcasting.center/"
-            ><h1 class="site-title">Open Podcasting Course</h1></a
+          <a class="site-title-link" href="/"
+            ><h1 class="site-title">Open Podcasting сourse</h1></a
           >
-          <p class="site-description">The Open Podcasting Course description</p>
+          <p class="site-description">Empowering podcasters through solid, community-driven education</p>
         </div>
       </div>
     </header>
