--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Open Podcasting Course – The Open Podcasting Course description</title>
+    <title>Open Podcasting сourse – Empowering podcasters through solid, community-driven education</title>
     <link rel="stylesheet" href="/assets/main.css" />
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
   </head>
@@ -18,18 +18,26 @@
           height="50"
         />
         <div>
-          <a class="site-title-link" href="https://podcasting.center/"
-            ><h1 class="site-title">Open Podcasting Course</h1></a
+          <a class="site-title-link" href="/"
+            ><h1 class="site-title">Open Podcasting сourse</h1></a
           >
-          <p class="site-description">The Open Podcasting Course description</p>
+          <p class="site-description">Empowering podcasters through solid, community-driven education</p>
         </div>
       </div>
     </header>
     
     <div class="line"></div>
     
-    <main>
-index page</main>
+    <main><h2>Description</h2>
+<p>Our goal is to guide you through every stage of podcast creation—from the ground up. We start with the very basics, unfolding the story of how podcasting began and evolved into the powerful, ever-growing medium it is today. We’ll explore its roots as a pioneering content distribution technology, trace its development through the rise of Podcasting 2.0, and follow it right into the hands-on aspects: equipment setup, audio editing, storytelling, content strategy, audience growth, and ultimately building and managing your own fully realized podcast.</p>
+<h2>Insight</h2>
+<p>As the creator of this resource, I bring firsthand experience and a deep understanding of the podcasting ecosystem. Over the years, I’ve seen how this intimate and versatile medium empowers creators to share their voices, ideas, and visions with an audience that’s truly engaged. I know what works, what pitfalls to avoid, and how to find the right balance between authenticity, production quality, and content strategy. I’m here to help you leverage these insights and turn your podcasting aspirations into reality.</p>
+<h2>Call to the Community</h2>
+<p>Join us in building a resource that empowers podcasters of all levels. Share your expertise, request new topics, and help shape a platform that demystifies podcasting and nurtures a strong, supportive community. Together, we’ll drive podcasting forward, forging a path for creators to tell their stories and amplify their voices.</p>
+<h2>Inspired by</h2>
+<p>The Odin Project, FullStack Open, and freeCodeCamp.</p>
+<p><em>Yeldar Kudaibergenov</em></p>
+</main>
 
     <footer class="footer">
       <div class="home-link">
