deploy: 4aeeb81aadcd3ba00418927d56f2ff6c71408145

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -28,15 +28,10 @@
     
     <div class="line"></div>
     
-    <main><h3>Description</h3>
-<p>Our goal is to guide you through every stage of podcast creation—from the ground up. We start with the very basics, unfolding the story of how podcasting began and evolved into the powerful, ever-growing medium it is today. We’ll explore its roots as a pioneering content distribution technology, trace its development through the rise of Podcasting 2.0, and follow it right into the hands-on aspects: equipment setup, audio editing, storytelling, content strategy, audience growth, and ultimately building and managing your own fully realized podcast.</p>
-<h3>Insight</h3>
-<p>As the creator of this resource, I bring firsthand experience and a deep understanding of the podcasting ecosystem. Over the years, I’ve seen how this intimate and versatile medium empowers creators to share their voices, ideas, and visions with an audience that’s truly engaged. I know what works, what pitfalls to avoid, and how to find the right balance between authenticity, production quality, and content strategy. I’m here to help you leverage these insights and turn your podcasting aspirations into reality.</p>
-<h3>Call to the Community</h3>
-<p>Join us in building a resource that empowers podcasters of all levels. Share your expertise, request new topics, and help shape a platform that demystifies podcasting and nurtures a strong, supportive community. Together, we’ll drive podcasting forward, forging a path for creators to tell their stories and amplify their voices.</p>
-<h3>Inspired by</h3>
-<p>The Odin Project, FullStack Open, and freeCodeCamp.</p>
-<p><a href="https://devlog.top"><em>Yeldar Kudaibergenov</em></a>.</p>
+    <main><h3>Curriculum</h3>
+<p>The course structure is not yet finalized, but it will be developed right here. Our vision is to create a comprehensive guide that takes you through every stage of podcasting, step by step.</p>
+<p>And the best part? <strong>You can be part of its creation!</strong></p>
+<p>Join us on <a href="https://github.com/yeldarx/opc">GitHub</a> to contribute your ideas, suggest topics, and help shape the future of this curriculum. Together, we’ll build an invaluable resource for podcasters at every level!</p>
 </main>
 
     <footer class="footer">
